[package]
name = "xml_writer"
version = "0.0.1"
authors = ["Piotr Zolnierek <pz@anixe.pl>"]
description = "a simple and fast xml writer"
license = "MIT"
repository = "https://github.com/pzol/xml_writer.git"
homepage = "http://github.com/pzol/xml_writer"
documentation = "http://github.com/pzol/xml_writer"

[lib]
name = "xml_writer"
